fix inputs length on mobile

--- a/app/player/team-register-form/team-register-form.css
+++ b/app/player/team-register-form/team-register-form.css
@@ -19,7 +19,6 @@
 }
 
 .request-team-form {
-    width: 40%;
     margin: auto;
 }
 
@@ -153,7 +152,8 @@ label {
 }
 
 .team-register-panel {
-    min-width: 650px;
+    max-width: 650px;
+    margin: auto;
 }
 
 .captain-info {
